# cutil

./: CMakeLists.txt  README.md
include/: cutil.h  hash.h  hmap.h  list.h
src/: CMakeLists.txt  cutil.c  hash.c  hmap.c  list.c
test/: CMakeLists.txt  test.hash.cpp  test.hmap.cpp  test.list.0.cpp  test.list.cpp
